--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	I am currently a final year (2018-2019) Ph.D. student in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. Previously, I received the B. Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 
-<p>My research lies at the intersection of medical image analysis and artificial intelligence. I am dedicated to bringing modern deep learning methods to biomedical image analysis. I also have expertise in deep learning for 3D vision. Recently, I focus on developing new learning algorithms while minimizing human supervision.</p>
+<p>My research lies at the intersection of medical image analysis and artificial intelligence. I am dedicated to designing modern deep learning methods for biomedical image analysis. I also have expertise in deep learning for 3D vision. Recently, I focus on developing new learning algorithms while minimizing human supervision.</p>
 
 <h2>News</h2>
 <ul>
@@ -555,9 +555,6 @@
 <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
       		<noscript><a href='https://clustrmaps.com/site/1aa2l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff'/></a></noscript> -->
 	</div>        
-	<br>
-        &copy; Lequan Yu | Last updated: 03/07/2018
-     
       </center></p>
 
 
