--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
 	<tbody>
 	<tr>
 		<td width="306">
+		<img src="./indexpics/UA-MT.png" width="285px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng. "Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation" <em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.
+		<p></p>
+		<p>[<a href="" target="_blank">paper coming soon</a>][<a href="" target="_blank">code coming soon</a>]</p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+		
+	<tr>
+		<td width="306">
+		<img src="./indexpics/BEAL.png" width="285px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td>Shujun Wang*, <b>Lequan Yu</b>*, Kang Li, Xin Yang, Chi-Wing Fu, and Pheng-Ann Heng. "Boundary and Entropy-driven Adversarial Learning for Fundus Image Segmentation" <em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.
+		<p></p>
+		<p>[<a href="https://arxiv.org/abs/1906.11143" target="_blank">paper</a>] [<a href="https://github.com/EmmaW8/BEAL" target="_blank">code</a>]</p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
+		
+	<tr>
+		<td width="306">
 		<img src="./indexpics/2019_tmi_shujun_fundus.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td>Shujun Wang, <b>Lequan Yu</b>, Xin Yang, Chi-Wing Fu, and Pheng-Ann Heng. "Patch-based Output Space Adversarial Learning for Joint Optic Disc and Cup Segmentation" <em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2019.
