--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	<tbody>
 	<tr>
 		<td width="306">
-		<img src="./indexpics/UA-MT.png" width="285px" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/UA_MT.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng. "Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation" <em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.
 		<p></p>
