--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 <h2>Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">NVIDA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
+		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
 		Applied Research Intern<br>
 		Topic: Few-shot medical image segmentation<br>
 	</li>
@@ -467,9 +467,11 @@
 <li>
 <b>Journal Reviews:</b>
 	<br> 
-	Medical Image Analysis (MedIA)<br>		
+	Medical Image Analysis (MedIA)<br>
+	IEEE Transactions on Medical Imaging (TMI)<br>
 	IEEE Transactions on Image Processing (TIP)<br>
 	IEEE Transactions on Biomedical Engineering (TBME)<br>
+	IEEE Transactions on Automation Science and Engineering (TASE) <br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	IEEE Access<br>
 	Neurocomputing<br>		
