change news in index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 <p>Recently, my research focuses on generalization, scalability and robustness of medical imaging systems. In particular, I am working on new learning algorithms while minimizing human supervision.</p> 
 
 <h2>News</h2>
-<ul>
+
+
+<div style="height: 250px; overflow: auto;">
+<ul >
 	<li>
 		[06/2019] I completed my PhD defense on June 11th, 2019. Cheers!
 	<li>
@@ -106,8 +109,9 @@
 	<li>
 		[10/2016] Our team won the first place in the MICCAI 2016 <a href="http://segchd.csail.mit.edu/">Whole-Heart and Great Vessel Segmentation Challenge</a>.
 	</li>
+						
 </ul>
-
+</div>
 
 
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
