--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<a href="https://www.linkedin.com/in/lequan-yu-124811a2"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://zh-cn.facebook.com/people/Lequan-Yu/100003696557697"><img src="./pic/Facebook_s.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
+				<p>[<a href="./Lequan_CV.pdf">Resume/CV</a>]</p>
 			</td>
 			<td>
 				<img src="./pic/lequan.png" border="0" width="240"><br>
@@ -57,7 +58,7 @@
 	</tr></tbody>
 </table>
 
-<h2>Biography [<a href="./Lequan_CV.pdf">CV</a>]</h2>
+<h2>Biography</h2>
 <p>
 	I am currently a final year (2018-2019) Ph.D. student in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. Previously, I received the B. Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
