--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
-		<a href="">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
+		<a href="https://arxiv.org/abs/1907.07034">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
 		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
 		<p style="margin-top:3px">
-			[<a href="" target="_blank">code coming soon</a>]
+			[<a href="https://github.com/yulequan/UA-MT" target="_blank">code</a>]
 		</p>
 	</li>
 	<li>
