--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
+		<a href="https://www.sciencedirect.com/science/article/pii/S1361841519300842">RMDL: Recalibrated multi-instance deep learning for whole slide gastric image classification</a><br>
+		Shujun Wang, Yaxi Zhu, <b>Lequan Yu</b>, Hao Chen, Huangjing Lin, Xiangbo Wan, Xinjuan Fan, and Pheng-Ann Heng.<br>
+		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2019.</br>
+	</li>
+	
+	<li>
 		<a href="https://arxiv.org/abs/1907.07034">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
 		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
