--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul >
+	<li>    
+		[08/2019] The paper on whole slide gastric image classification has been accepted by MedIA.
+	</li>
+	
 	<li>
 		[06/2019] I completed my PhD defense on June 11th, 2019. Cheers!
 	<li>
