--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 <div style="height: 240px; overflow: auto;">
 <ul >
 	<li>    
-		[08/2019] The paper on whole slide gastric image classification has been accepted by MedIA.
+		[09/2019] One paper about semi-supervised medical image segmentation has been accepted by WACV 2020.
+	</li>
+	<li>    
+		[08/2019] One paper about whole slide gastric image classification has been accepted by MedIA.
 	</li>
 	
 	<li>
@@ -80,7 +83,7 @@
 		[06/2019] Three papers were <b>early accepted</b> by <a href="https://www.miccai2019.org/"> MICCAI 2019</a>.
 	</li>
 	<li> 
-		[02/2019] Our work on optic disc and cup segmentation from fundus images was accepted by IEEE TMI.
+		[02/2019] Our work about optic disc and cup segmentation from fundus images was accepted by IEEE TMI.
 	</li>
 	<li>
 		[09/2018] Our team (CUHKMED) won the first place on the optic disc/cup segmentation challenge at <a href="https://refuge.grand-challenge.org/Home/"> REFUGE </a>.
@@ -89,19 +92,19 @@
 		[07/2018] I started my internship in NVIDIA's deep learning for medical imaging research group, Bethesda, USA.
 	</li>	
 	<li>
-		[07/2018] The paper on segmentation from Prenatal Volumetric Ultrasound has been accepted by TMI. 
+		[07/2018] One paper about segmentation from Prenatal Volumetric Ultrasound has been accepted by TMI. 
 	</li>
 	<li>
-		[07/2018] The paper on edge-aware point set consolidation network has been accepted by ECCV 2018. 
+		[07/2018] One paper about edge-aware point set consolidation network has been accepted by ECCV 2018. 
 	</li>
 	<li>
-		[07/2018] The paper on semi-supervised skin lesion segmentation has been accepted by BMVC 2018. 
+		[07/2018] One paper about semi-supervised skin lesion segmentation has been accepted by BMVC 2018. 
 	</li>
 	<li>
-		[02/2018] The paper on point cloud upsampling has been accepted by CVPR 2018. 
+		[02/2018] One paper about point cloud upsampling has been accepted by CVPR 2018. 
 	</li>	
 	<li>
-		[09/2017] The paper on 3D deeply supervised networks won the <i><b>MedIA-MICCAI'17 Best Paper Award</i></b>. 
+		[09/2017] The paper about 3D deeply supervised networks won the <i><b>MedIA-MICCAI'17 Best Paper Award</i></b>. 
 	</li>
         <li>	
 		[05/2017] Two papers (<b>one Oral</b>) were accepted to MICCAI 2017.
