--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
 			[<a href="https://github.com/EmmaW8/BEAL" target="_blank">code</a>]
 		</p>
 	</li>
+	<li>
+		<a href="https://arxiv.org/abs/1910.04331" target="_blank">Agent with Warm Start and Active Termination for Plane Localization in 3D Ultrasound</a><br>
+		Haoran Dou*, Xin Yang*, Jikuan Qian, Wufeng Xue, Hao Qin, Xu Wang, <b>Lequan Yu</b>, Shujun Wang, Yi Xiong, Pheng-Ann Heng, and Dong Ni.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019. <b>[Oral Presentation]</b></br>
+	</li>
 
 	<li>
 		<a href="https://arxiv.org/abs/1902.07519" target="_blank">Patch-based Output Space Adversarial Learning for Joint Optic Disc and Cup Segmentation</a><br>
