--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 					<h1>Lequan Yu</h1><h1>
 				</h1></div>
 
-				<h3>Ph.D. Candidate</h3>
+				<h3>Postdoctoral Research Fellow</h3>
 				<p>
-					Rm 1024, Ho Sin-Hang Engineering Building <br>
-					Dept. of Computer Science and Engineering<br>
-					The Chinese University of Hong Kong <br>
-					Shatin, N.T., Hong Kong<br>
+					1070 Arastradero Road, <br>
+					Dept. of Radiation Oncology<br>
+					Stanford University <br>
+					Palo Alto, CA, 94304<br>
 					<br>
-					Email: ylqzd2011 at gmail dot com
+					Email: lequany at stanford dot edu
 				</p>
 				<p> <a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
@@ -59,7 +59,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am currently a final year (2018-2019) Ph.D. student in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. Previously, I received the B. Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
+	I am a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. Before that, I obtained my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. Previously, I received the B. Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 <p>My research lies at the intersection of medical image analysis and artificial intelligence. 
 	I am dedicated to designing data-efficient learning methods for biomedical image analysis. I also have expertise in deep learning for 3D vision. Recently, I am working on new learning algorithms while minimizing human supervision.</p> 
