--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					1070 Arastradero Road, <br>
 					Dept. of Radiation Oncology<br>
 					Stanford University <br>
-					Palo Alto, CA, 94304<br>
+					Palo Alto, CA 94304<br>
 					<br>
 					Email: lequany at stanford dot edu
 				</p>
@@ -69,11 +69,13 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul >
+	<li>
+		[11/2019] One paper was accepted by TMI.
 	<li>    
-		[09/2019] One paper about semi-supervised medical image segmentation has been accepted by WACV 2020.
+		[09/2019] One paper about semi-supervised medical image segmentation was accepted by WACV 2020.
 	</li>
 	<li>    
-		[08/2019] One paper about whole slide gastric image classification has been accepted by MedIA.
+		[08/2019] One paper about whole slide gastric image classification was accepted by MedIA.
 	</li>
 	
 	<li>
@@ -82,7 +84,7 @@
 		[06/2019] Three papers were <b>early accepted</b> by <a href="https://www.miccai2019.org/"> MICCAI 2019</a>.
 	</li>
 	<li> 
-		[02/2019] Our work about optic disc and cup segmentation from fundus images was accepted by IEEE TMI.
+		[02/2019] Our work about optic disc and cup segmentation from fundus images was accepted by TMI.
 	</li>
 	<li>
 		[09/2018] Our team (CUHKMED) won the first place on the optic disc/cup segmentation challenge at <a href="https://refuge.grand-challenge.org/Home/"> REFUGE </a>.
@@ -122,13 +124,28 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
-		<a href="https://www.sciencedirect.com/science/article/pii/S1361841519300842">RMDL: Recalibrated multi-instance deep learning for whole slide gastric image classification</a><br>
+		<a href="https://arxiv.org/abs/1911.01376" target="_blank">CANet: Cross-disease Attention Network for Joint Diabetic Retinopathy and Diabetic Macular Edema Grading</a><br>
+		Xiaomeng Li, Xiaowei Hu, <b>Lequan Yu</b>, Lei Zhu, Chi-Wing Fu, and Pheng-Ann Heng.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2019.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/xmengli999/CANet" target="_blank">code</a>]
+		</p>
+	</li>
+
+	<li>
+		<a href="https://arxiv.org/abs/1811.12506" target="_blank">3D Semi-supervised Learning with Uncertainty-aware Multi-view Co-training</a><br>
+		Yingda Xia, Fengze Liu, Dong Yang, Jinzheng Cai, <b>Lequan Yu</b>, Zhuotun Zhu, Daguang Xu, Alan Yuille, and Holger Roth.<br>
+		<em>Winter Conference on Applications of Computer Vision</em> (<i><b>WACV</b></i>), 2020.</br>
+	</li>
+
+	<li>
+		<a href="https://www.sciencedirect.com/science/article/pii/S1361841519300842" target="_blank">RMDL: Recalibrated multi-instance deep learning for whole slide gastric image classification</a><br>
 		Shujun Wang, Yaxi Zhu, <b>Lequan Yu</b>, Hao Chen, Huangjing Lin, Xiangbo Wan, Xinjuan Fan, and Pheng-Ann Heng.<br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2019.</br>
 	</li>
 	
 	<li>
-		<a href="https://arxiv.org/abs/1907.07034">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
+		<a href="https://arxiv.org/abs/1907.07034" target="_blank">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
 		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
 		<p style="margin-top:3px">
@@ -321,6 +338,11 @@
 <h2>Experience</h2>
 <ul>
 	<li>
+		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Present</div><br>
+		Postdoctoral Research Fellow<br>
+		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
+	</li>
+	<li>
 		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
 		Applied Research Intern<br>
 		Topic: Few-shot medical image segmentation<br>
@@ -333,7 +355,7 @@
 	<li>
 		<div style="float:left; text-align:left">State Key Laboratory of CAD & CG, Zhejiang University, China</div> <div style="float:right; text-align:right">Sep. 2013 – Jun. 2015</div><br>
 		Undergraduate Research Assistant<br>
-		Advisor: Prof. Deng Cai<br>
+		Advisor: <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a><br>
 	</li>
 </ul>
 
@@ -359,19 +381,16 @@
 </table>
 
 <h2>Professional Activities</h2>
-<li>
-	<b>Membership:</b> IEEE Student, MICCAI Student, AAAI Student
-	<p style="margin-top:3px"></p>
-</li>
-
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
-	MICCAI 2019<br>
-	ICCV 2019<br>
-	CVPR 2019<br>
-	MICCAI 2018<br>
-	ISBI 2018<br>
+	International Conference on Computer Vision and Pattern Recognition (CVPR) 2020<br>
+	AAAI Conference on Artificial Intelligence (AAAI) 2020<br>
+	IEEE Winter Conference on Applications of Computer Vision (WACV) 2020<br>
+	International Conference on Computer Vision (ICCV) 2019<br>
+	International Conference on Computer Vision and Pattern Recognition (CVPR) 2019<br>
+	International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) 2019<br>
+	International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) 2018<br>
 	<p style="margin-top:3px"></p>		
 </li>
 
@@ -384,13 +403,15 @@
 	IEEE Transactions on Biomedical Engineering (TBME)<br>
 	IEEE Transactions on Automation Science and Engineering (TASE) <br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
+	IEEE Robotics and Automation Letters (RA-L)<br>
 	IEEE Access<br>
 	Neurocomputing<br>		
 	International Journal of Computer Assisted Radiology and Surgery (IJCARS)<br>
 	International Journal of Medical Informatics<br>
+	Artificial Intelligence in Medicine<br>
+	SPIE Journal of Electronic Imaging (JEI)<br>
 	Computer Methods and Programs in Biomedicine (CMPB)<br>
 	Informatics in Medicine Unlocked<br>
-	Journal of Electronic Imaging (JEI)<br>
 	Signal Processing
 	<p style="margin-top:3px"></p>		
 </li>
