--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, CSE, CUHK, The Chinese University of Hong Kong, zju, Zhejiang University"> 
+<meta name="keywords" content="Lequan Yu, Yu Lequan, Lequan, Stanford University, Stanford, CSE, CUHK, The Chinese University of Hong Kong, ZJU, Zhejiang University"> 
 <meta name="description" content="Lequan Yu's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Lequan Yu, The Chinese University of Hong Kong</title>
+<title>Lequan Yu</title>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
