--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul >
 	<li>
-		[11/2019] One paper was accepted by TMI.
+		[11/2019] Two papers was accepted by TMI, AAAI 2020.
 	<li>    
 		[09/2019] One paper about semi-supervised medical image segmentation was accepted by WACV 2020.
 	</li>
@@ -123,6 +123,12 @@
 
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
+	<li>
+		<a href="" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
+		Kang Li, <b>Lequan Yu</b>, Shujun Wang, and Pheng-Ann Heng.<br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
+	</li>
+	
 	<li>
 		<a href="https://arxiv.org/abs/1911.01376" target="_blank">CANet: Cross-disease Attention Network for Joint Diabetic Retinopathy and Diabetic Macular Edema Grading</a><br>
 		Xiaomeng Li, Xiaowei Hu, <b>Lequan Yu</b>, Lei Zhu, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -237,7 +243,7 @@
 	<li>
 		<a href="https://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14719" target="_blank">Volumetric ConvNets with Mixed Residual Connections for Automated Prostate Segmentation from 3D MR Images</a><br>
 		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
-		<em>Thirty-First AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
 		<p style="margin-top:3px">
 			[<a href="https://promise12.grand-challenge.org/" target="_blank">challenge website</a>]
 		</p>
@@ -273,7 +279,7 @@
 	<li>
 		<a href="https://arxiv.org/abs/1612.01655" target="_blank">Fine-grained Recurrent Neural Networks for Automatic Prostate Segmentation in Ultrasound Images</a><br>
 		Xin Yang, <b>Lequan Yu</b>, Lingyun Wu, Yi Wang, Dong Ni, Jing Qin, Pheng-Ann Heng.<br>
-		<em>Thirty-First AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
 	</li>
 
 	<li>
