--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
+	SIGGRAPH 2020<br>
+	European Conference on Computer Vision (ECCV) 2020<br>
 	International Conference on Computer Vision and Pattern Recognition (CVPR) 2020<br>
 	AAAI Conference on Artificial Intelligence (AAAI) 2020<br>
 	IEEE Winter Conference on Applications of Computer Vision (WACV) 2020<br>
