--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
 <b>Journal Reviews:</b>
 	<br> 
 	Medical Image Analysis (MedIA)<br>
+	Scientific Reports<br>
 	IEEE Transactions on Medical Imaging (TMI)<br>
 	IEEE Transactions on Image Processing (TIP)<br>
 	IEEE Transactions on Biomedical Engineering (TBME)<br>
