--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul >
 	<li>
+		[02/2020] One paper about multi-site learning was accepted by TMI.
+	<li>  
+	<li>
 		[11/2019] Two papers was accepted by TMI, AAAI 2020.
 	<li>    
 		[09/2019] One paper about semi-supervised medical image segmentation was accepted by WACV 2020.
@@ -123,6 +126,16 @@
 
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
+	<li>
+		<a href="https://arxiv.org/abs/2002.03366" target="_blank">MS-Net: Multi-Site Network for Improving Prostate Segmentation with Heterogeneous MRI Data</a><br>
+		Quande Liu, Qi Dou, <b>Lequan Yu</b>, and Pheng Ann Heng.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/liuquande/MS-Net" target="_blank">code</a>]
+		</p>
+	</li>	
+
+	
 	<li>
 		<a href="" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
 		Kang Li, <b>Lequan Yu</b>, Shujun Wang, and Pheng-Ann Heng.<br>
