--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 	
 	<li>
-		<a href="" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
+		<a href="./files/Cross_modal_image_segmentation.pdf" target="_blank">Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation</a><br>
 		Kang Li, <b>Lequan Yu</b>, Shujun Wang, and Pheng-Ann Heng.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
 	</li>
