--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[04/2020] One paper about unsupervised learning for point cloud was accepted by ACM TOG.
+	</li>  
+	
+	<li>
 		[02/2020] One paper about multi-site learning was accepted by TMI.
 	</li>  
 	
@@ -130,6 +134,12 @@
 
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
+	<li>
+		<a href="https://arxiv.org/abs/1905.01684" target="_blank">Unsupervised Detection of Distinctive Regions on 3D Shapes</a><br>
+		Xianzhi Li, <b>Lequan Yu</b>, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
+		<em>ACM Transactions on Graphics</em> (<i><b>ACM TOG</b></i>), 2020.</br>
+	</li>
+	
 	<li>
 		<a href="https://arxiv.org/abs/2002.03366" target="_blank">MS-Net: Multi-Site Network for Improving Prostate Segmentation with Heterogeneous MRI Data</a><br>
 		Quande Liu, Qi Dou, <b>Lequan Yu</b>, and Pheng Ann Heng.<br>
