--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
+		<a href="https://arxiv.org/abs/1903.00348" target="_blank">Transformation-consistent Self-ensembling Model for Semi-supervised Medical Image Segmentation</a><br>
+		Xiaomeng Li, <b>Lequan Yu</b>, Hao Chen, Chi-Wing Fu, Lei Xing, Pheng-Ann Heng.<br>
+		<em>IEEE Transaction on Neural Network and Learning System</em> (<i><b>TNNLS</b></i>), 2020.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/1905.01684" target="_blank">Unsupervised Detection of Distinctive Regions on 3D Shapes</a><br>
 		Xianzhi Li, <b>Lequan Yu</b>, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
 		<em>ACM Transactions on Graphics</em> (<i><b>ACM TOG</b></i>), 2020.</br>
