--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[05/2020] Two papers about semi-supervised learning for medical image analysis were accepted by TMI and TNNLS.
+	</li> 
+	<li>
 		[04/2020] One paper about unsupervised learning for point cloud was accepted by ACM TOG.
 	</li>  
 	
@@ -78,7 +81,7 @@
 	</li>  
 	
 	<li>
-		[11/2019] Two papers was accepted by TMI, AAAI 2020.
+		[11/2019] Two papers was accepted by TMI and AAAI 2020.
 	</li>
 	
 	<li>    
@@ -135,6 +138,11 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
+		<a href="" target="_blank">Semi-supervised Medical Image Classication with Relation-driven Self-ensembling Model</a><br>
+		Quande Liu, <b>Lequan Yu</b>, Qi Dou, Luyang Luo, Pheng-Ann Heng.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/1903.00348" target="_blank">Transformation-consistent Self-ensembling Model for Semi-supervised Medical Image Segmentation</a><br>
 		Xiaomeng Li, <b>Lequan Yu</b>, Hao Chen, Chi-Wing Fu, Lei Xing, Pheng-Ann Heng.<br>
 		<em>IEEE Transaction on Neural Network and Learning System</em> (<i><b>TNNLS</b></i>), 2020.</br>
@@ -147,7 +155,7 @@
 	
 	<li>
 		<a href="https://arxiv.org/abs/2002.03366" target="_blank">MS-Net: Multi-Site Network for Improving Prostate Segmentation with Heterogeneous MRI Data</a><br>
-		Quande Liu, Qi Dou, <b>Lequan Yu</b>, and Pheng Ann Heng.<br>
+		Quande Liu, Qi Dou, <b>Lequan Yu</b>, and Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 		<p style="margin-top:3px">
 			[<a href="https://github.com/liuquande/MS-Net" target="_blank">code</a>]
