--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 		<a href="https://arxiv.org/abs/1905.01684" target="_blank">Unsupervised Detection of Distinctive Regions on 3D Shapes</a><br>
 		Xianzhi Li, <b>Lequan Yu</b>, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
 		<em>ACM Transactions on Graphics</em> (<i><b>ACM TOG</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/nini-lxz/Unsupervised-Shape-Distinction-Detection" target="_blank">code</a>]
+		</p>
 	</li>
 	
 	<li>
