--- a/index.html
+++ b/index.html
@@ -138,9 +138,12 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
-		<a href="" target="_blank">Semi-supervised Medical Image Classication with Relation-driven Self-ensembling Model</a><br>
-		Quande Liu, <b>Lequan Yu</b>, Qi Dou, Luyang Luo, Pheng-Ann Heng.<br>
+		<a href="https://arxiv.org/abs/2005.07377" target="_blank">Semi-supervised Medical Image Classication with Relation-driven Self-ensembling Model</a><br>
+		Quande Liu, <b>Lequan Yu</b>, Luyang Luo, Qi Dou, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/liuquande/SRC-MT" target="_blank">code</a>]
+		</p>
 	</li>
 	<li>
 		<a href="https://arxiv.org/abs/1903.00348" target="_blank">Transformation-consistent Self-ensembling Model for Semi-supervised Medical Image Segmentation</a><br>
