--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	I am a postdoctoral research fellow in <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. Before that, I obtained my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a> in July 2019. Previously, I received the B. Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 <p>My research lies at the intersection of medical imaging and artificial intelligence. 
-	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. Recently, I am working on new learning algorithms while minimizing human supervision and medical image reconstruction.</p> 
+	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.</p> 
 
 <h2>News</h2>
 
@@ -73,7 +73,7 @@
 		[05/2020] Two papers about semi-supervised learning for medical image analysis were accepted by TMI and TNNLS.
 	</li> 
 	<li>
-		[04/2020] One paper about unsupervised learning for point cloud was accepted by ACM TOG.
+		[04/2020] One paper about unsupervised point cloud analysis was accepted by ACM TOG.
 	</li>  
 	
 	<li>
@@ -94,44 +94,66 @@
 	
 	<li>
 		[06/2019] I completed my PhD defense on June 11th, 2019. Cheers!
-	<li>
-		[06/2019] Three papers were <b>early accepted</b> by <a href="https://www.miccai2019.org/"> MICCAI 2019</a>.
-	</li>
-	<li> 
-		[02/2019] Our work about optic disc and cup segmentation from fundus images was accepted by TMI.
-	</li>
-	<li>
-		[09/2018] Our team (CUHKMED) won the first place on the optic disc/cup segmentation challenge at <a href="https://refuge.grand-challenge.org/Home/"> REFUGE </a>.
-	</li>
-	<li>
-		[07/2018] I started my internship in NVIDIA's deep learning for medical imaging research group, Bethesda, USA.
-	</li>	
-	<li>
-		[07/2018] One paper about segmentation from Prenatal Volumetric Ultrasound has been accepted by TMI. 
-	</li>
-	<li>
-		[07/2018] One paper about edge-aware point set consolidation network has been accepted by ECCV 2018. 
-	</li>
-	<li>
-		[07/2018] One paper about semi-supervised skin lesion segmentation has been accepted by BMVC 2018. 
-	</li>
-	<li>
-		[02/2018] One paper about point cloud upsampling has been accepted by CVPR 2018. 
-	</li>	
-	<li>
-		[09/2017] The paper about 3D deeply supervised networks won the <i><b>MedIA-MICCAI'17 Best Paper Award</i></b>. 
-	</li>
-        <li>	
-		[05/2017] Two papers (<b>one Oral</b>) were accepted to MICCAI 2017.
-	</li>
-	<li>
-		[03/2017] I started my internship in Siemens Healthcare, Medical Imaging Technologies, Princeton, USA.
-	</li>	
-	<li>
-		[10/2016] Our team won the first place in the MICCAI 2016 <a href="http://segchd.csail.mit.edu/">Whole-Heart and Great Vessel Segmentation Challenge</a>.
-	</li>
 						
 </ul>
+</div>
+
+<h2>Experience</h2>
+<ul>
+	<li>
+		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Present</div><br>
+		Postdoctoral Research Fellow<br>
+		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
+		Applied Research Intern<br>
+		Topic: Few-shot medical image segmentation<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">Siemens Healthineers, Princeton, New Jersey, USA</div> <div style="float:right; text-align:right">Mar. 2017 – Jul. 2017</div><br>
+		Research Intern<br>
+		Topic: Body landmark detection via deep reinforcement learning<br>
+	</li>
+</ul>
+
+<script>
+$(document).ready(function() {
+  $('.paperhi button').click(function() {
+     $('.papers-container').removeClass('papers-selected');
+  });
+  $('.paperlo button').click(function() {
+     $('.papers-container').addClass('papers-selected');
+  });
+
+});
+</script>
+<h2 class="paperlo">All Publications<button type="button" class="ml-3 btn btn-light"> Show representative</button></h2>
+<h2 class="paperhi paperhi-only">Representative Publications<button type="button" class="ml-3 btn btn-light"> Show all</button></h2>
+
+<div class="publication media">
+           <img src="project_img/towards-kang.png" class="papericon">
+           <div class="media-body"><b>Towards Cross-modality Medical Image Segmentation with Online Mutual Knowledge Distillation.</b><br>
+	  Kang Li, Lequan Yu, <b><u>Shujun Wang</u></b>, Pheng-Ann Heng.<i> <br>
+<em>AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</em>, 2020. 
+</i><br>[<a href="https://link.springer.com/chapter/10.1007/978-3-030-32778-1_4" target="_blank">PDF is coming</a>]
+	   </div>
+</div>
+
+<div class="publication media">
+           <img src="project_img/refuge.jpg" class="papericon">
+           <div class="media-body"><b>REFUGE Challenge: A Unified Framework for Evaluating Automated Methods for Glaucoma Assessment from Fundus Photographs.</b><br>
+	   José Ignacio Orlando, Huazhu Fu,..., <b><u>Shujun Wang</u></b>, ..., .<i><em>  <br>
+             Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2019. </i><br>[<a href="https://www.sciencedirect.com/science/article/pii/S1361841519301100" target="_blank">PDF</a>]
+	   </div>
+</div>
+
+<div class="publication media paperhi">
+           <img src="project_img/RMDL.png" class="papericon">
+           <div class="media-body"><b>RMDL: Recalibrated multi-instance deep learning for whole slide gastric image classification.</b><br>
+	   <b><u>Shujun Wang</u></b>, Yaxi Zhu, Lequan Yu, Hao Chen, Huangjing Lin, Xiangbo Wan, Xinjuan Fan, and Pheng-Ann Heng.<i> <br>
+             <em> Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2019. </i><br>[<a href="https://www.sciencedirect.com/science/article/pii/S1361841519300842" target="_blank">PDF</a>]
+	   </div>
 </div>
 
 
@@ -387,30 +409,6 @@
 	</li>
 	
 </ul>
-<h2>Experience</h2>
-<ul>
-	<li>
-		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Present</div><br>
-		Postdoctoral Research Fellow<br>
-		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
-	</li>
-	<li>
-		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
-		Applied Research Intern<br>
-		Topic: Few-shot medical image segmentation<br>
-	</li>
-	<li>
-		<div style="float:left; text-align:left">Siemens Healthineers, Princeton, New Jersey, USA</div> <div style="float:right; text-align:right">Mar. 2017 – Jul. 2017</div><br>
-		Research Intern<br>
-		Topic: Body landmark detection via deep reinforcement learning<br>
-	</li>
-	<li>
-		<div style="float:left; text-align:left">State Key Laboratory of CAD & CG, Zhejiang University, China</div> <div style="float:right; text-align:right">Sep. 2013 – Jun. 2015</div><br>
-		Undergraduate Research Assistant<br>
-		Advisor: <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a><br>
-	</li>
-</ul>
-
 
 <h2>Honors &amp; Awards</h2>
 <table style="border-spacing:2px">
