--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Lequan Yu</title>
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -70,6 +72,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[06/2020] One paper about multi-site learning was accepted by TMI.
+	</li>
+	<li>
 		[05/2020] Two papers about semi-supervised learning for medical image analysis were accepted by TMI and TNNLS.
 	</li> 
 	<li>
@@ -121,6 +126,12 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <ul>
 	<li>
+		<a href="" target="_blank">Deep Mining External Imperfect Data for Chest X-ray Diseases Screening</a><br>
+		Luyang Luo*, <b>Lequan Yu*</b>, Hao Chen, Quande Liu, Xi Wang, Jiaqi Xu, Pheng-Ann Heng. <br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+	</li>
+
+	<li>
 		<a href="https://arxiv.org/abs/2005.07377" target="_blank">Semi-supervised Medical Image Classication with Relation-driven Self-ensembling Model</a><br>
 		Quande Liu, <b>Lequan Yu</b>, Luyang Luo, Qi Dou, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
@@ -158,12 +169,14 @@
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2020.</br>
 	</li>
 	
+	<!--
 	<li>
 		<a href="https://arxiv.org/abs/1811.12506" target="_blank">3D Semi-supervised Learning with Uncertainty-aware Multi-view Co-training</a><br>
 		Yingda Xia, Fengze Liu, Dong Yang, Jinzheng Cai, <b>Lequan Yu</b>, Zhuotun Zhu, Daguang Xu, Alan Yuille, and Holger Roth.<br>
 		<em>Winter Conference on Applications of Computer Vision</em> (<i><b>WACV</b></i>), 2020.</br>
 	</li>
-
+	-->
+	
 	<li>
 		<a href="https://arxiv.org/abs/1911.01376" target="_blank">CANet: Cross-disease Attention Network for Joint Diabetic Retinopathy and Diabetic Macular Edema Grading</a><br>
 		Xiaomeng Li, Xiaowei Hu, <b>Lequan Yu</b>, Lei Zhu, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -195,11 +208,14 @@
 			[<a href="https://github.com/EmmaW8/BEAL" target="_blank">code</a>]
 		</p>
 	</li>
+	
+	<!--
 	<li>
 		<a href="https://arxiv.org/abs/1910.04331" target="_blank">Agent with Warm Start and Active Termination for Plane Localization in 3D Ultrasound</a><br>
 		Haoran Dou*, Xin Yang*, Jikuan Qian, Wufeng Xue, Hao Qin, Xu Wang, <b>Lequan Yu</b>, Shujun Wang, Yi Xiong, Pheng-Ann Heng, and Dong Ni.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019. <b>[Oral Presentation]</b></br>
 	</li>
+	-->
 
 	<li>
 		<a href="https://arxiv.org/abs/1902.07519" target="_blank">Patch-based Output Space Adversarial Learning for Joint Optic Disc and Cup Segmentation</a><br>
@@ -211,6 +227,7 @@
 		</p>
 	</li>
 
+	<!--
 	<li>
 		<a href="https://books.google.com.hk/books?hl=en&lr=&id=FapxDwAAQBAJ&oi=fnd&pg=PA385&dq=info:8JlAPwVugm8J:scholar.google.com&ots=ILpS6QfLy2&sig=nMf-w6UeWV4VLvat3G1s1SYLGNU&redir_esc=y#v=onepage&q&f=false" target="_blank">Deep Convolutional Networks for Automated Volumetric Cardiovascular Image Segmentation: From a Design Perspective</a><br>
 		Xin Yang, <b>Lequan Yu</b>, Qi Dou, Jing Qin, and Pheng-Ann Heng.<br>
@@ -220,7 +237,8 @@
 			[<a href="https://github.com/xy0806/miccai17-mmwhs-hybrid" target="_blank">code2</a>]
 		</p>
 	</li>
-
+	-->
+	
 	<li>
 		<a href="https://arxiv.org/abs/1807.06010" target="_blank">EC-Net: an Edge-aware Point set Consolidation Network</a><br>
 		<b>Lequan Yu</b>*, Xianzhi Li*, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng.<br>
@@ -282,7 +300,8 @@
 		<a href="https://ieeexplore.ieee.org/document/7792699" target="_blank">Automated Melanoma Recognition in Dermoscopy Images via Very Deep Residual Networks</a><br>
 		<b>Lequan Yu</b>, Hao Chen, Qi Dou, Jing Qin, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2017.</br>
-		<font color="red">Ranked 1st place in ISIC 2016 Melanoma Classification Challenge</font></br>
+		<!-- <font color="red">Ranked 1st place in ISIC 2016 Melanoma Classification Challenge</font></br> -->
+		<font color="red">ESI Highly Cited Paper</font></br>
 		<p style="margin-top:3px">
 			[<a href="skin/index.html" target="_blank">project</a>] 
 			[<a href="https://github.com/yulequan/melanoma-recognition" target="_blank">code</a>]
@@ -320,12 +339,14 @@
 			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code</a>]
 		</p>
 	</li>
-
+	
+	<!--
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S1053811917303348" target="_blank">VoxResNet: Deep Voxelwise Residual Networks for Volumetric Brain Segmentation</a><br>
 		Hao Chen, Qi Dou, <b>Lequan Yu</b>, Jing Qin, Pheng-Ann Heng.<br>
 		<em><b>NeuroImage</b></em>, 2017.</br>
 	</li>
+	--> 
 
 	<li>
 		<a href="https://link.springer.com/chapter/10.1007/978-3-319-52280-7_10" target="_blank">3D FractalNet: Dense Volumetric Segmentation for Cardiovascular MRI Volumes</a><br>
@@ -338,11 +359,13 @@
 		
 	</li>
 
+	<!--
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/7576695" target="_blank">Multi-level Contextual 3D CNNs for False Positive Reduction in Pulmonary Nodule Detection</a><br>
 		Qi Dou, Hao Chen, <b>Lequan Yu</b>, Jing Qin, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Biomedical Engineering</em> (<i><b>TBME</b></i>), 2016.</br>
 	</li>
+	
 
 	<li>
 		<a href="https://arxiv.org/abs/1604.02677" target="_blank">DCAN: Deep Contour-Aware Networks for Accurate Gland Segmentation</a><br>
@@ -352,11 +375,13 @@
 			[<a href="http://appsrv.cse.cuhk.edu.hk/~hchen/research/2015miccai_gland.html" target="_blank">project</a>]
 		</p>
 	</li>
-
+    -->
+	
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/7403984" target="_blank">Automatic Detection of Cerebral Microbleeds from MR Images via 3D Convolutional Neural Networks</a><br>
 		Qi Dou*, Hao Chen*, <b>Lequan Yu</b>, Lei Zhao, Jing Qin, Defeng Wang, Vincent CT Mok, Lin Shi, Pheng-Ann Heng.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2016.</br>
+		<font color="red">ESI Highly Cited Paper</font></br>
 		<p style="margin-top:3px">
 			[<a href="http://appsrv.cse.cuhk.edu.hk/~qdou/cmb-3dcnn/cmb-3dcnn.html" target="_blank">project</a>]
 		</p>
