--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 
 
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
-<ul>
+<p><font face="Arial" size="4"><b>2020</b></font></p> 
+	<ul>
 	<li>
 		<a href="" target="_blank">Deep Mining External Imperfect Data for Chest X-ray Diseases Screening</a><br>
 		Luyang Luo*, <b>Lequan Yu*</b>, Hao Chen, Quande Liu, Xi Wang, Jiaqi Xu, Pheng-Ann Heng. <br>
@@ -176,7 +177,9 @@
 		<em>Winter Conference on Applications of Computer Vision</em> (<i><b>WACV</b></i>), 2020.</br>
 	</li>
 	-->
-	
+</ul>
+<p><font face="Arial" size="4"><b>2019</b></font></p> 
+<ul>
 	<li>
 		<a href="https://arxiv.org/abs/1911.01376" target="_blank">CANet: Cross-disease Attention Network for Joint Diabetic Retinopathy and Diabetic Macular Edema Grading</a><br>
 		Xiaomeng Li, Xiaowei Hu, <b>Lequan Yu</b>, Lei Zhu, Chi-Wing Fu, and Pheng-Ann Heng.<br>
@@ -226,7 +229,9 @@
 			[<a href="https://emmaw8.github.io/pOSAL/index.html" target="_blank">project</a>]
 		</p>
 	</li>
-
+</ul>
+<p><font face="Arial" size="4"><b>Before 2019</b></font></p> 
+<ul>
 	<!--
 	<li>
 		<a href="https://books.google.com.hk/books?hl=en&lr=&id=FapxDwAAQBAJ&oi=fnd&pg=PA385&dq=info:8JlAPwVugm8J:scholar.google.com&ots=ILpS6QfLy2&sig=nMf-w6UeWV4VLvat3G1s1SYLGNU&redir_esc=y#v=onepage&q&f=false" target="_blank">Deep Convolutional Networks for Automated Volumetric Cardiovascular Image Segmentation: From a Design Perspective</a><br>
@@ -277,7 +282,10 @@
 		<em>British Machine Vision Conference</em> (<i><b>BMVC</b></i>), 2018.</br>
 	</li>
 
-	<li>
+</ul>
+<p><font face="Arial" size="4"><b>2017</b></font></p> 
+<ul>
+<li>
 		<a href="https://arxiv.org/abs/1708.00573" target="_blank">Automatic 3D Cardiovascular MR Segmentation with Densely-Connected Volumetric ConvNets</a><br>
 		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2017.</br>
@@ -289,7 +297,7 @@
 
 	<li>
 		<a href="https://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14719" target="_blank">Volumetric ConvNets with Mixed Residual Connections for Automated Prostate Segmentation from 3D MR Images</a><br>
-		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
+		<b>Lequan Yu</b>, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2017. <b>[Oral Presentation]</b></br>
 		<p style="margin-top:3px">
 			[<a href="https://promise12.grand-challenge.org/" target="_blank">challenge website</a>]
@@ -351,7 +359,7 @@
 	<li>
 		<a href="https://link.springer.com/chapter/10.1007/978-3-319-52280-7_10" target="_blank">3D FractalNet: Dense Volumetric Segmentation for Cardiovascular MRI Volumes</a><br>
 		<b>Lequan Yu</b>, Xin Yang, Jing Qin, Pheng-Ann Heng.<br>
-		<em>MICCAI HVSMR Workshop</em>, 2016.</br>
+		<em>MICCAI Workshop on Whole-Heart and Great Vessel Segmentation from 3D Cardiovascular MRI in Congenital Heart Disease</em>, 2016.</br>
 		<font color="red">Ranked 1st place in Whole-Heart and Great Vessel Segmentation Challenge</font></br>
 		<p style="margin-top:3px">
 			[<a href="http://segchd.csail.mit.edu/index.html" target="_blank">challenge website</a>]
