--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
-		<a href="" target="_blank">Deep Mining External Imperfect Data for Chest X-ray Diseases Screening</a><br>
+		<a href="https://arxiv.org/abs/2006.03796" target="_blank">Deep Mining External Imperfect Data for Chest X-ray Diseases Screening</a><br>
 		Luyang Luo*, <b>Lequan Yu*</b>, Hao Chen, Quande Liu, Xi Wang, Jiaqi Xu, Pheng-Ann Heng. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
 	</li>
@@ -414,6 +414,7 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
+		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
 		<tr><td> Teaching Assistant of Merit, 2018</td></tr>
 		<tr><td> <a href="http://www.cse.cuhk.edu.hk/en/achievement/professor-and-research-staff/110-prof-heng-pheng-ann-and-his-team-won-the-best-paper-award-of-medical-image-analysis-in-the-20th-international-conference-on-medical-image-computing-and-computer-assisted-intervention-2017-media-miccai-17">MedIA-MICCAI'17 Best Paper Award</a>, 2017</td></tr>
     	<tr><td> AAAI Scholarship, San Fransisco, USA, 2017</td></tr>
@@ -434,6 +435,7 @@
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
+	IEEE Winter Conference on Applications of Computer Vision (WACV) 2021<br>
 	SIGGRAPH 2020<br>
 	European Conference on Computer Vision (ECCV) 2020<br>
 	International Conference on Computer Vision and Pattern Recognition (CVPR) 2020<br>
@@ -450,15 +452,17 @@
 <b>Journal Reviews:</b>
 	<br> 
 	Medical Image Analysis (MedIA)<br>
-	Scientific Reports<br>
 	IEEE Transactions on Medical Imaging (TMI)<br>
 	IEEE Transactions on Image Processing (TIP)<br>
 	IEEE Transactions on Biomedical Engineering (TBME)<br>
+	IEEE Transactions on Neural Networks and Learning Systems (TNNLS) <br>
 	IEEE Transactions on Automation Science and Engineering (TASE) <br>
+	IEEE Transactions on Big Data (TBD) <br>
 	IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
 	IEEE Robotics and Automation Letters (RA-L)<br>
-	IEEE Access<br>
-	Neurocomputing<br>		
+	Scientific Reports <br>
+	IEEE Access <br>
+	Neurocomputing <br>		
 	International Journal of Computer Assisted Radiology and Surgery (IJCARS)<br>
 	International Journal of Medical Informatics<br>
 	Artificial Intelligence in Medicine<br>
