--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[06/2020] Four papers were accepted by MICCAI 2020 (coming soon). 
+	</li>
+	<li>
 		[06/2020] One paper about multi-site learning was accepted by TMI.
 	</li>
 	<li>
