--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </p> 
 
 <p>
-	If you would like to work with me, feel free to send me an email. 
+	If you would like to work with me, feel free to send me an email. Remote collaboration is also welcome!
 </p>
 <h2>News</h2>
 
