--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[07/2020] Two papers were accepted by ECCV 2020 and MedIA (coming soon). 
+		[07/2020] Three papers were accepted by ECCV 2020, TMI, and MedIA. 
 	</li>
 	<li>
-		[06/2020] Four papers were accepted by MICCAI 2020 (coming soon). 
+		[06/2020] Four papers were accepted by MICCAI 2020. 
 	</li>
 	<li>
 		[06/2020] One paper about multi-site learning was accepted by TMI.
@@ -141,6 +141,28 @@
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
+		<a href="" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
+		Shujun Wang, <b>Lequan Yu</b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
+		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Robust Medical Image Segmentation from Non-expert Annotations with Tri-network</a><br>
+		Tianwei Zhang*, <b>Lequan Yu*</b>, Na Hu, Su Lv, Shi Gu. <br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2020.</br>
+	</li>
+	<li>
+		<a href="https://arxiv.org/abs/2007.06279" target="_blank">Dual-Teacher: Integrating Intra-domain and Inter-domain Teachers for Annotation-efficient Cardiac Segmentation</a><br>
+		Kang Li, Shujun Wang, <b>Lequan Yu</b>, Pheng-Ann Heng. <br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2020.</br>
+	</li>
+	
+	<li>
+		<a href="https://arxiv.org/abs/1907.00354" target="_blank">Difficulty-aware Meta-learning for Rare Disease Diagnosis</a><br>
+		Xiaomeng Li, <b>Lequan Yu</b>, Yueming Jin, Chi-Wing Fu, Lei Xing, Pheng-Ann Heng. <br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2020.</br>
+	</li>
+	
+	<li>
 		<a href="https://arxiv.org/abs/2006.03796" target="_blank">Deep Mining External Imperfect Data for Chest X-ray Diseases Screening</a><br>
 		Luyang Luo*, <b>Lequan Yu*</b>, Hao Chen, Quande Liu, Xi Wang, Jiaqi Xu, Pheng-Ann Heng. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
@@ -158,6 +180,9 @@
 		<a href="https://arxiv.org/abs/1903.00348" target="_blank">Transformation-consistent Self-ensembling Model for Semi-supervised Medical Image Segmentation</a><br>
 		Xiaomeng Li, <b>Lequan Yu</b>, Hao Chen, Chi-Wing Fu, Lei Xing, Pheng-Ann Heng.<br>
 		<em>IEEE Transaction on Neural Network and Learning System</em> (<i><b>TNNLS</b></i>), 2020.</br>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/xmengli999/TCSM" target="_blank">code</a>]
+		</p>
 	</li>
 	<li>
 		<a href="https://arxiv.org/abs/1905.01684" target="_blank">Unsupervised Detection of Distinctive Regions on 3D Shapes</a><br>
