--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[07/2020] I have received the "CUHK Young Scholars Thesis Award 2019".
+	</li>
+	<li>
 		[07/2020] Three papers were accepted by ECCV 2020, TMI, and MedIA. 
 	</li>
 	<li>
@@ -98,21 +101,6 @@
 	<li>
 		[02/2020] One paper about multi-site learning was accepted by TMI.
 	</li>  
-	
-	<li>
-		[11/2019] Two papers was accepted by TMI and AAAI 2020.
-	</li>
-	
-	<li>    
-		[09/2019] One paper about semi-supervised medical image segmentation was accepted by WACV 2020.
-	</li>
-	
-	<li>    
-		[08/2019] One paper about whole slide gastric image classification was accepted by MedIA.
-	</li>
-	
-	<li>
-		[06/2019] I completed my PhD defense on June 11th, 2019. Cheers!
 						
 </ul>
 </div>
@@ -445,6 +433,7 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
+		<tr><td> CUHK Young Scholars Thesis Award 2019 </td></tr>
 		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
 		<tr><td> Teaching Assistant of Merit, 2018</td></tr>
 		<tr><td> <a href="http://www.cse.cuhk.edu.hk/en/achievement/professor-and-research-staff/110-prof-heng-pheng-ann-and-his-team-won-the-best-paper-award-of-medical-image-analysis-in-the-20th-international-conference-on-medical-image-computing-and-computer-assisted-intervention-2017-media-miccai-17">MedIA-MICCAI'17 Best Paper Award</a>, 2017</td></tr>
