--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	Previously, I received the B. Eng degree from <a href="http://www.cs.zju.edu.cn/">Department of Computer Science and Technology</a> in <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015, under the supervision of <a href="http://www.cad.zju.edu.cn/home/dengcai/">Prof. Deng Cai</a>.
 </p>
 <p>
-	My research lies at the intersection of medical imaging and artificial intelligence. 
+	My research lies at the intersection of medical image analysis and artificial intelligence. 
 	I am dedicated to designing data-efficient learning methods for biomedical image analysis and reconstruction. I also have expertise in deep learning for 3D vision. 
 	Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.
 </p> 
@@ -80,7 +80,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[07/2020] I have received the "CUHK Young Scholars Thesis Award 2019".
+		[07/2020] I have received the "<font color="red">CUHK Young Scholars Thesis Award 2019</font>".
 	</li>
 	<li>
 		[07/2020] Three papers were accepted by ECCV 2020, TMI, and MedIA. 
@@ -129,7 +129,7 @@
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
 	<li>
-		<a href="" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
+		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu</b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
 	</li>
