--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[07/2020] I have received the "<font color="red">CUHK Young Scholars Thesis Award 2019</font>".
+		[07/2020] I have received the <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">"<font color="red">CUHK Young Scholars Thesis Award 2019</font>"</a>.
 	</li>
 	<li>
 		[07/2020] Three papers were accepted by ECCV 2020, TMI, and MedIA. 
