--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[08/2020] One paper about domain generalization was accepted by TMI.
+	</li>
+	<li>
 		[07/2020] I have received the <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">"<font color="red">CUHK Young Scholars Thesis Award 2019</font>"</a>.
 	</li>
 	<li>
@@ -128,6 +131,11 @@
 <h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=llXf3wUAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>
+	<li>
+		<a href="" target="_blank">DoFE: Domain-oriented Feature Embedding for Generalizable Fundus Image Segmentation on Unseen Datasets</a><br>
+		Shujun Wang, <b>Lequan Yu</b>, Kang Li, Xin Yang, Chi-Wing Fu, Pheng-Ann Heng. <br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2020.</br>
+	</li>
 	<li>
 		<a href="https://arxiv.org/abs/2007.09316" target="_blank">Learning from Extrinsic and Intrinsic Supervisions for Domain Generalization</a><br>
 		Shujun Wang, <b>Lequan Yu</b>, Caizi Li, Chi-Wing Fu, Pheng-Ann Heng. <br>
